frontend/src/static/css/_extra.css
/* ... */
body .popup .nav-menu .menu-item-icon {
	color: var(--header-popup-menu-icon-color);
}

body.dark_theme .user-menu-top-link {
	color: #fff;
}

body .media-title-banner .media-actions > * > *.share .popup-fullscreen .popup-main > div,
body .media-title-banner .media-actions > * > *.save .popup-fullscreen .popup-main > div,
body .media-title-banner .media-actions > * > *.more-options .popup-fullscreen .popup-main > div,
body .media-title-banner .media-actions > * > *.video-downloads .popup-fullscreen .popup-main > div {
	background-color: var(--popup-bg-color);
}

body .share-options .circle-icon-button {
	background: var(--media-actions-share-copy-field-bg-color);
}

body .share-embed .on-right-top-inner .circle-icon-button {
	background: var(--popup-bg-color);
}

body .media-title-banner .media-actions > * > *.share,
body .media-title-banner .media-actions > * > *.save,
body .media-title-banner .media-actions > * > *.download a {
	color: #869ea5;
}

body.dark_theme .media-title-banner .media-actions > * > *.share,
body.dark_theme .media-title-banner .media-actions > * > *.save,
body.dark_theme .media-title-banner .media-actions > * > *.download a {
	color: #bad8dd;
}

/*
 * Header bar.
 *
 */

header.page-header {
	/* background-color: #025196; */
}

header.page-header:before {
	content: '';
	position: absolute;
	top: -67px;
	left: 282px;
	width: 140px;
	height: 140px;
	display: block;
	background-image: url('../images/ripple_white.svg');
	background-repeat: no-repeat;
	background-size: contain;
	opacity: 0.5;
}

header.page-header .mobile-search-toggle {
	padding-right: 16px;
}

header.page-header .page-header-left div > .circle-icon-button,
header.page-header .page-header-right div > .circle-icon-button {
	color: white;
	background-color: rgba(255, 255, 255, 0);
}

@media screen and (min-width: 640px) and (max-width: 1023px) {
	body .page-header-left {
		max-width: 88%;
	}
}

header.page-header .on-logo-right {
	padding-top: 9px;
	padding-left: 20px;
	padding-right: 0;
	font-size: 14px;
	font-weight: 500;
	color: #bad8dd;
}

@media (max-width: 767px) {
	header.page-header .on-logo-right {
		display: none !important;
	}
}

header.page-header.mobile-search-field .on-logo-right {
	display: none;
}

@media (min-width: 1520px) {
	header.page-header .search-field-wrap {
		/* margin-left:800px; */
		/* margin-left:42%;
		width:33%; */

		/* margin-left:56%;
		width:28%; */

		/* width:39.5833333333%;
		margin-left:36.1681372184%; */
		/* margin-left:54%; */
	}
}

/* @media (min-width: 1280px) { */

header.page-header .search-field-wrap {
	width: 39.5833333333%;
	margin-left: 689px;
	margin-left: 46.1681372184%;
	/* margin-left:48%; */

	width: 39.5833333333%;
	margin-left: 36.1681372184%;
	margin-left: 567px;
	width: 30%;
}

/* } */

@media (min-width: 1024px) {
	header.page-header .search-field-wrap {
		margin-left: 567px;
		width: 30%;
	}
}

@media (min-width: 1366px) {
	header.page-header .search-field-wrap {
		width: 39.5833333333%;
	}
}

@media (min-width: 1580px) {
	header.page-header .search-field-wrap {
		width: 39.5833333333%;
		margin-left: 36.1681372184%;
	}
}

header.page-header.mobile-search-field .search-field-wrap {
	width: auto;
	margin-left: 0;
}

header.page-header .search-field-wrap input[type='text'] {
	color: white;
	border-color: #102c40;
	border-width: 1px;
	/* border-color:var(--header-bg-color); */
	/* background-color: var(--header-bg-color);
	background-color: rgba(0,0,0,0.1); */
	/* background:none; */
	background: #102c40;
	padding-left: 47px;
	padding-right: 20px;
	font-size: 16px;
	line-height: 2.55;
	-moz-border-radius: 99em;
	-webkit-border-radius: 99em;
	border-radius: 99em;
}

header.page-header .search-field-wrap input[type='text']:focus {
	color: #bad8dd;
	border-color: #223647;
	box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.1);
}

header.page-header .search-field-wrap input[type='text']::-webkit-input-placeholder {
	color: #87a2aa;
}

header.page-header .search-field-wrap input[type='text']::-moz-placeholder {
	color: #87a2aa;
}

header.page-header .search-field-wrap input[type='text']:-ms-input-placeholder {
	color: #87a2aa;
}

header.page-header .search-field-wrap input[type='text']:-moz-placeholder {
	color: #87a2aa;
}

header.page-header .search-field-wrap button[type='submit'] {
	width: 18px;
	left: 20px;
	right: auto;
	color: white;
	-moz-border-radius: 0 1px 1px 0;
	-webkit-border-radius: 0 1px 1px 0;
	border-radius: 0 1px 1px 0;
}

header.page-header .search-field-wrap button[type='submit'] {
	/* border-color: #223647;
	background-color: #223647; */
	background: none;
	border-width: 0;
}

header.page-header .search-field-wrap button[type='submit']:hover,
header.page-header .search-field-wrap button[type='submit']:focus {
	/* border-color: rgba(255, 255, 255, 0.0);
	background-color: rgba(255, 255, 255, 0.18); */
}

header.page-header .search-field-wrap button[type='submit'] .material-icons:after,
header.page-header .mobile-search-toggle .material-icons:after {
	display: none;
}

header.page-header .search-field-wrap button[type='submit'] .material-icons,
header.page-header .mobile-search-toggle .material-icons {
	width: 18px;
	height: 18px;
	margin: 0;
	padding: 0;
	line-height: 1;
	background-image: url('../images/icons/search-icon.svg');
	background-repeat: no-repeat;
	background-size: contain;
}

header.page-header .search-field-wrap .text-field-wrap {
	padding-left: 18px;
	padding-left: 0px;
	padding-right: 0;
}

header.page-header .search-field-wrap .text-field-wrap .popup {
	right: 0;
	border: 0;
}

header.page-header .search-predictions-list {
	padding-top: 4px;
	padding-bottom: 4px;
	background-color: #1a3f61;
}

header.page-header .search-predictions-item {
	cursor: pointer;
	padding: 0;
	font-weight: 500;
	color: #fff;
	background-color: #1a3f61;
	border-bottom: 2px solid #224667;
}

header.page-header .search-predictions-item span {
	display: block;
	padding: 12px 24px;
}
/* ... */

